Fix layout shifting

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: .4rem;
   display: grid;
   justify-items: center;
@@ -28,8 +29,8 @@
   }
 
   &:hover, &:has(input:focus) {
-    border-width: 2px;
     border-color: var(--stroke-highlight);
+    outline-width: 0;
     background-color: var(--surface-secondary);
 
     & p {
