--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -12,7 +12,8 @@ input, select, textarea {
   padding: 1.2rem 1.6rem;
   font: var(--text);
   border-radius: .8rem;
-  border: 1px solid var(--stroke-default);
+  border: .2rem solid transparent;
+  outline: 1px solid var(--stroke-default);
 }
 
 input:focus,
@@ -20,7 +21,7 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
   outline: .4rem solid var(--surface-secondary);
-  border: .2rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: .1px;
 }
 
